# riot-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build-vm.yaml  build.yml
cmake/: Config.cmake  DownloadSDKs.cmake  InitialSetup.cmake
code/: CMakeLists.txt
code/engine/: CMakeLists.txt  header_list.cmake
code/engine/include/riot/core/: monoInstance.h
code/engine/include/riot/core/base/: base.h
code/engine/include/riot/core/base/config/: architecture.h  compiler.h  compilerTraits.h  defines.h  platform.h
code/engine/include/riot/core/platform/: platform.h
code/engine/include/riot/core/platform/win32/: windows.h
code/engine/include/riot/core/platform/win32/internal/: minWindows.h  postWinapi.h  preWinapi.h
code/engine/include/riot/rtl/: staticVector.h
code/engine/include/riot/system/: SystemInitParams.h  logging.h
code/engine/include/riot/util/: version.h
code/engine/src/: CMakeLists.txt  riot_version.h.in  temp.cpp
code/engine/src/core/platform/: platform.cpp
code/engine/src/system/: CMakeLists.txt  SystemInitParams.cpp  logging.cpp
code/ext/: CMakeLists.txt
code/launcher/: CMakeLists.txt  main.cpp
code/tools/: CMakeLists.txt
code/tools/code-formatter/: CMakeLists.txt  main.cpp
editor/: CMakeLists.txt  temp.txt
engine/: temp.txt
tools/: .gitignore  CMakeLists.txt
